[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renderbase"
version = "1.0.0"
description = "Official Python SDK for Renderbase - Generate PDFs and Excel files from templates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Renderbase", email = "support@renderbase.dev" }
]
keywords = [
    "renderbase",
    "pdf",
    "excel",
    "document-generation",
    "templates",
    "sdk",
    "api"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://renderbase.dev"
Documentation = "https://docs.renderbase.dev/sdk/python"
Repository = "https://github.com/renderbase/sdk-python"
Issues = "https://github.com/renderbase/sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["renderbase"]

[tool.mypy]
python_version = "3.8"
strict = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
asyncio_mode = "auto"
